# poetic-emr-serverless

./: .gitignore  Makefile  README.md  entrypoint.py  pyproject.toml
poetic_emr_serverless/: main.py
poetic_emr_serverless/lib/: config.py  transformer.py
tests/: conftest.py
tests/data/: config.yaml
tests/lib/: test_config.py  test_transformer.py
